# IIC

./: README.md  Sim_I2C_Slave.c
BME680_data_transfer_out4tssop20/: CMakeLists.txt
BME680_data_transfer_out4tssop20/BME680_data_transfer_out/MDK/: JLinkSettings.ini  bme680.d  bme680V1.0.2  bme680V1.0.build_log.htm  bme680V1.0.hex  bme680V1.0.htm  bme680V1.0.lnp  bme680V1.0.map  bsec_integration.d  common_porting.d  gpio.d  iicaMasterSendReceive.axf  iicaMasterSendReceive.build_log.htm  iicaMasterSendReceive.htm  iicaMasterSendReceive.lnp  iicaMasterSendReceive.uvguix.Jason  iicaMasterSendReceive.uvguix.jackt  iicaMasterSendReceive.uvoptx  iicaMasterSendReceive.uvprojx  iicaMasterSendReceive_CMS32L051.dep  intp.d  main.c  main.d  retarget.d  sci.d  sci_user.d  sim_i2c_slave.d  startup_cms32l051.d  startup_cms32l051.lst  system_cms32l051.d  wdt.d  wdt_user.d
BME680_data_transfer_out4tssop20/BME680_data_transfer_out/MDK/Objects/: BME680_0608.hex
BME680_data_transfer_out4tssop20/BME680_data_transfer_out/MDK/RTE/Device/CMS32L051TS20/: startup_CMS32L051.s  system_CMS32L051.c  userdefine.h
BME680_data_transfer_out4tssop20/BME680_data_transfer_out/MDK/inc/: CMS32L051.h  Sim_I2C_Slave.h  bme680_defs.h  common_porting.h  intp.h  main.h  sci.h
BME680_data_transfer_out4tssop20/BME680_data_transfer_out/MDK/src/: Sim_I2C_Slave.c  bme680.c  bsec_integration.c  common_porting.c  intp.c  intp_user.c  sci_user.c
